--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -315,8 +315,6 @@ spec:
                 type: string
               elasticsearchUser:
                 type: string
-              image:
-                type: string
               minioAccessKey:
                 type: string
               minioSecretKey:
@@ -333,15 +331,14 @@ spec:
                 type: string
               nulogServiceCpuRequest:
                 type: string
-              nvidiaVersion:
+              nulogTrainImage:
                 type: string
-              rancherLoggingNamespace:
+              nvidiaVersion:
                 type: string
             required:
             - components
             - elasticsearchPassword
             - elasticsearchUser
-            - image
             - minioAccessKey
             - minioSecretKey
             - minioVersion
@@ -350,6 +347,7 @@ spec:
             - natsReplicas
             - natsVersion
             - nulogServiceCpuRequest
+            - nulogTrainImage
             - nvidiaVersion
             type: object
           status:
