--- a/.drone.yml
+++ b/.drone.yml
@@ -39,7 +39,9 @@ steps:
     context: package/
     dockerfile: package/Dockerfile
     repo: rancher/opni-manager
-    tag: ${DRONE_TAG}
+    tags: 
+    - ${DRONE_TAG}
+    - latest
   when:
     event:
     - tag
