--- a/config/crd/bases/demo.opni.io_opnidemoes.yaml
+++ b/config/crd/bases/demo.opni.io_opnidemoes.yaml
@@ -43,13 +43,15 @@ spec:
                 properties:
                   infra:
                     properties:
-                      helmController:
+                      deployHelmController:
                         type: boolean
-                      localPathProvisioner:
+                      deployNvidiaPlugin:
                         type: boolean
                     type: object
                   opni:
                     properties:
+                      deployGpuServices:
+                        type: boolean
                       elastic:
                         properties:
                           enabled:
@@ -106,20 +108,6 @@ spec:
                         required:
                         - enabled
                         type: object
-                      traefik:
-                        properties:
-                          enabled:
-                            type: boolean
-                          set:
-                            additionalProperties:
-                              anyOf:
-                              - type: integer
-                              - type: string
-                              x-kubernetes-int-or-string: true
-                            type: object
-                        required:
-                        - enabled
-                        type: object
                     type: object
                 required:
                 - infra
@@ -130,8 +118,6 @@ spec:
               elasticsearchPassword:
                 type: string
               elasticsearchUser:
-                type: string
-              image:
                 type: string
               minioAccessKey:
                 type: string
@@ -149,17 +135,14 @@ spec:
                 type: string
               nulogServiceCpuRequest:
                 type: string
-              nvidiaVersion:
+              nulogTrainImage:
                 type: string
-              quickstart:
-                type: boolean
-              traefikVersion:
+              nvidiaVersion:
                 type: string
             required:
             - components
             - elasticsearchPassword
             - elasticsearchUser
-            - image
             - minioAccessKey
             - minioSecretKey
             - minioVersion
@@ -168,9 +151,8 @@ spec:
             - natsReplicas
             - natsVersion
             - nulogServiceCpuRequest
+            - nulogTrainImage
             - nvidiaVersion
-            - quickstart
-            - traefikVersion
             type: object
           status:
             description: OpniDemoStatus defines the observed state of OpniDemo
