If rancher logging is already installed, create logging CRs in its control namespace

--- a/config/crd/bases/demo.opni.io_opnidemoes.yaml
+++ b/config/crd/bases/demo.opni.io_opnidemoes.yaml
@@ -119,6 +119,8 @@ spec:
                 type: string
               elasticsearchUser:
                 type: string
+              loggingCrdNamespace:
+                type: string
               minioAccessKey:
                 type: string
               minioSecretKey:
