--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -315,6 +315,8 @@ spec:
                 type: string
               elasticsearchUser:
                 type: string
+              loggingCrdNamespace:
+                type: string
               minioAccessKey:
                 type: string
               minioSecretKey:
