--- a/.drone.yml
+++ b/.drone.yml
@@ -3,11 +3,9 @@
 kind: pipeline
 type: docker
 name: build-amd64
-
 platform:
   os: linux
   arch: amd64
-
 steps:
 - name: build-and-package
   image: rancher/dapper:v0.5.5
@@ -16,7 +14,13 @@ steps:
   volumes:
   - name: docker
     path: /var/run/docker.sock
-
+- name: test
+  image: rancher/dapper:v0.5.5
+  commands:
+  - dapper test
+  volumes:
+  - name: docker
+    path: /var/run/docker.sock
 - name: stage-binaries
   image: rancher/dapper:v0.5.5
   commands:
@@ -29,7 +33,6 @@ steps:
     ref:
     - refs/head/main
     - refs/tags/*
-
 - name: publish-dockerhub
   image: plugins/docker
   settings:
@@ -51,7 +54,6 @@ steps:
     refs:
     - refs/head/main
     - refs/tags/*
-
 - name: publish-bin-artifacts
   image: plugins/github-release
   settings:
@@ -69,7 +71,6 @@ steps:
     ref:
     - refs/head/main
     - refs/tags/*
-  
 volumes:
 - name: docker
   host:
