--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,20 +3,28 @@
 # It should be run by config/default
 resources:
   - bases/opni.io_opniclusters.yaml
+  - bases/opni.io_logadapters.yaml
   - bases/demo.opni.io_opnidemoes.yaml
+  - logging/logging.opni.io_clusterflows.yaml
+  - logging/logging.opni.io_clusteroutputs.yaml
+  - logging/logging.opni.io_flows.yaml
+  - logging/logging.opni.io_loggings.yaml
+  - logging/logging.opni.io_outputs.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
-patchesStrategicMerge:
+patchesStrategicMerge: []
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_opniclusters.yaml
 #- patches/webhook_in_opnidemoes.yaml
+#- patches/webhook_in_logadapters.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_opniclusters.yaml
 #- patches/cainjection_in_opnidemoes.yaml
+#- patches/cainjection_in_logadapters.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
