--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -12,19 +12,19 @@ resources:
   - logging/logging.opni.io_outputs.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
-patchesStrategicMerge: []
-# [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
-# patches here are for enabling the conversion webhook for each CRD
-#- patches/webhook_in_opniclusters.yaml
-#- patches/webhook_in_opnidemoes.yaml
-#- patches/webhook_in_logadapters.yaml
-# +kubebuilder:scaffold:crdkustomizewebhookpatch
+patchesStrategicMerge:
+  # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
+  # patches here are for enabling the conversion webhook for each CRD
+  # - patches/webhook_in_opniclusters.yaml
+  # - patches/webhook_in_opnidemoes.yaml
+  - patches/webhook_in_logadapters.yaml
+  # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
-# [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
-# patches here are for enabling the CA injection for each CRD
-#- patches/cainjection_in_opniclusters.yaml
-#- patches/cainjection_in_opnidemoes.yaml
-#- patches/cainjection_in_logadapters.yaml
+  # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
+  # patches here are for enabling the CA injection for each CRD
+  #- patches/cainjection_in_opniclusters.yaml
+  #- patches/cainjection_in_opnidemoes.yaml
+  - patches/cainjection_in_logadapters.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
