Reconile root logging object

--- a/config/samples/_v1beta1_logadapter.yaml
+++ b/config/samples/_v1beta1_logadapter.yaml
@@ -4,5 +4,8 @@ metadata:
   name: logadapter-sample
 spec:
   provider: K3S
+  opniCluster:
+    name: opnicluster-sample
+    namespace: default
   k3s:
     containerEngine: openrc
