Implement RKE log adapter

--- a/config/crd/bases/opni.io_logadapters.yaml
+++ b/config/crd/bases/opni.io_logadapters.yaml
@@ -3696,6 +3696,9 @@ spec:
                 - KubeAudit
                 type: string
               rke:
+                properties:
+                  logLevel:
+                    type: string
                 type: object
               rke2:
                 type: object
