--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -18505,6 +18505,9 @@ spec:
                 - KubeAudit
                 type: string
               rke:
+                properties:
+                  logLevel:
+                    type: string
                 type: object
               rke2:
                 type: object
