Bug fixes and start rke2

--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -18510,6 +18510,9 @@ spec:
                     type: string
                 type: object
               rke2:
+                properties:
+                  logPath:
+                    type: string
                 type: object
               rootFluentConfig:
                 properties:
