--- a/config/crd/bases/opni.io_logadapters.yaml
+++ b/config/crd/bases/opni.io_logadapters.yaml
@@ -3701,6 +3701,9 @@ spec:
                     type: string
                 type: object
               rke2:
+                properties:
+                  logPath:
+                    type: string
                 type: object
               rootFluentConfig:
                 properties:
