--- a/.drone.yml
+++ b/.drone.yml
@@ -86,6 +86,7 @@ services:
       - NEW_ID=$(cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 6 | head -n 1)
       - k3d cluster create drone-$${NEW_ID} --config hack/k3d-drone.yaml --api-port $(hostname -i):6445
       - until kubectl --context k3d-drone-$${NEW_ID} -n kube-system wait --for=condition=Ready pods -l k8s-app; do sleep 1; done
+      - kubectl apply --context k3d-drone-$${NEW_ID} -f https://github.com/jetstack/cert-manager/releases/download/v1.4.0/cert-manager.yaml
       - k3d kubeconfig get drone-$${NEW_ID} > kubeconfig.yaml
       - echo "k3d started successfully"
       - tail -f /dev/null
