Update Tiltfile for remote debugging, refactor api setup for logging crds; small bugfixes

--- a/config/samples/_v1beta1_logadapter.yaml
+++ b/config/samples/_v1beta1_logadapter.yaml
@@ -1,11 +1,12 @@
 apiVersion: opni.io/v1beta1
 kind: LogAdapter
 metadata:
-  name: logadapter-sample
+  name: k3s
+  namespace: default
 spec:
   provider: K3S
   opniCluster:
     name: opnicluster-sample
     namespace: default
   k3s:
-    containerEngine: openrc
+    containerEngine: systemd
