--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -50349,7 +50349,31 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - serviceaccounts
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - services
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - logging.opni.io
+  resources:
+  - loggings
   verbs:
   - create
   - delete
