--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
   - _v1beta1_logadapter.yaml
+  - _v1beta1_opnicluster.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
