add test scaffolding; add pretrainedmodel controller scaffolding

--- a/config/crd/bases/opni.io_opniclusters.yaml
+++ b/config/crd/bases/opni.io_opniclusters.yaml
@@ -49,6 +49,8 @@ spec:
                         type: string
                     type: object
                 type: object
+              defaultRepo:
+                type: string
               elastic:
                 properties:
                   credentials:
@@ -80,11 +82,35 @@ spec:
                     properties:
                       image:
                         type: string
+                      imagePullPolicy:
+                        description: PullPolicy describes a policy for if/when to pull a container image
+                        type: string
+                      imagePullSecrets:
+                        items:
+                          description: LocalObjectReference contains enough information to let you locate the referenced object inside the same namespace.
+                          properties:
+                            name:
+                              description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names TODO: Add other useful fields. apiVersion, kind, uid?'
+                              type: string
+                          type: object
+                        type: array
                     type: object
                   inference:
                     properties:
                       image:
                         type: string
+                      imagePullPolicy:
+                        description: PullPolicy describes a policy for if/when to pull a container image
+                        type: string
+                      imagePullSecrets:
+                        items:
+                          description: LocalObjectReference contains enough information to let you locate the referenced object inside the same namespace.
+                          properties:
+                            name:
+                              description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names TODO: Add other useful fields. apiVersion, kind, uid?'
+                              type: string
+                          type: object
+                        type: array
                       pretrainedModels:
                         items:
                           properties:
@@ -578,10 +604,39 @@ spec:
                           type: object
                         type: array
                     type: object
+                  payloadReceiver:
+                    properties:
+                      image:
+                        type: string
+                      imagePullPolicy:
+                        description: PullPolicy describes a policy for if/when to pull a container image
+                        type: string
+                      imagePullSecrets:
+                        items:
+                          description: LocalObjectReference contains enough information to let you locate the referenced object inside the same namespace.
+                          properties:
+                            name:
+                              description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names TODO: Add other useful fields. apiVersion, kind, uid?'
+                              type: string
+                          type: object
+                        type: array
+                    type: object
                   preprocessing:
                     properties:
                       image:
                         type: string
+                      imagePullPolicy:
+                        description: PullPolicy describes a policy for if/when to pull a container image
+                        type: string
+                      imagePullSecrets:
+                        items:
+                          description: LocalObjectReference contains enough information to let you locate the referenced object inside the same namespace.
+                          properties:
+                            name:
+                              description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names TODO: Add other useful fields. apiVersion, kind, uid?'
+                              type: string
+                          type: object
+                        type: array
                     type: object
                 type: object
               storage:
@@ -614,6 +669,9 @@ spec:
                   storageClass:
                     type: string
                 type: object
+              version:
+                default: latest
+                type: string
             type: object
           status:
             description: OpniClusterStatus defines the observed state of OpniCluster
