--- a/config/crd/bases/opni.io_pretrainedmodels.yaml
+++ b/config/crd/bases/opni.io_pretrainedmodels.yaml
@@ -75,6 +75,14 @@ spec:
             type: object
           status:
             description: PretrainedModelStatus defines the observed state of PretrainedModel
+            properties:
+              configMap:
+                description: LocalObjectReference contains enough information to let you locate the referenced object inside the same namespace.
+                properties:
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names TODO: Add other useful fields. apiVersion, kind, uid?'
+                    type: string
+                type: object
             type: object
         type: object
     served: true
