--- a/config/samples/_v1beta1_opnicluster.yaml
+++ b/config/samples/_v1beta1_opnicluster.yaml
@@ -10,3 +10,7 @@ spec:
       image: "rancher/opni-inference-service"
       pretrainedModels:
         - name: control-plane
+  nats:
+    authMethod: password
+    username: opnitest
+    password: password
