--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -16,7 +16,7 @@ resources:
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-# - patches/webhook_in_opniclusters.yaml
+- patches/webhook_in_opniclusters.yaml
 # - patches/webhook_in_opnidemoes.yaml
 - patches/webhook_in_logadapters.yaml
 #- patches/webhook_in_pretrainedmodels.yaml
@@ -24,7 +24,7 @@ patchesStrategicMerge:
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-#- patches/cainjection_in_opniclusters.yaml
+- patches/cainjection_in_opniclusters.yaml
 #- patches/cainjection_in_opnidemoes.yaml
 - patches/cainjection_in_logadapters.yaml
 #- patches/cainjection_in_pretrainedmodels.yaml
